grails-app/assets/stylesheets/doi.css
/*
 *= require ala-admin-asset
 *= require_self
 */

.admin-message {
    text-align: center;
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 10px;
}

.admin-message-text {
    font-size: 24px;
}

.doi-table {
    width: 100%;
    border: 1px solid gainsboro;
}

.doi-table td, .doi-table th {
    border: 1px solid gainsboro;
}

h4 {
    margin-top: 30px;
}

h5 {
    font-weight: bold
}

.indent {
    padding-left: 20px;
}

.citation {
    padding-left: 10px;
    padding-bottom: 30px;
}

.citation:before {
    content: '\2014 \00A0';
}

h1 {
    margin-bottom: 5px
}

h4.search-result {
    margin: 15px 0 3px;
    line-height: 1.3;
}

li>p.help-block {
    margin-bottom: 0;
    margin-top: 0;
}

.clear {
    clear: both;
}

.req-field:after {
    content: "*";
    color: red;
    font-weight: bold;
    font-size: 1.5em;
    white-space: nowrap;
}

/* DOI - taken from GBIF */
.doi {
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    font-weight: 500;
    padding: 4px 6px;
    white-space:nowrap;
    white-space:nowrap;
}
.doi-sm {
    font-size: 13px;
    padding: 2px 0;
}
.doi span:first-of-type {
    -webkit-transition: all .3s ease;
    transition: all .3s ease;
    background: #D5502A ;
    /*#09c;*/
    padding: 4px 6px;
    /*border-radius: 5px 0 0 5px;*/
    color: #fff;
    border-right-width: 0;
    border-color:#D5502A;
            /*#09c;*/
}
.doi span:last-of-type {
    color: #333;
    background: #fff;
    text-decoration: none;
    padding: 4px 6px;
    /*border-radius: 0 5px 5px 0;*/
    border-left-width: 0;
}
.doi span {
    border: 1px solid #adadad;
}
.doi:hover span:first-of-type {
    background: #D5502A;
            /*#004d66; */
    border-color: #D5502A;
            /*#004d66;*/
}
.doi:hover span:last-of-type {
    background: #f9f9f9;
}

#doiTitle {
    text-align: center;
}

#doiTitle h2 {
    font-size: 18px;
}

.padding-bottom-10 {
    padding-bottom: 10px;
}

.padding-bottom-20 {
    padding-bottom: 20px;
}

